Corrected an issue where changes were not being saved when components were added or removed. Corrected an issue creating templates and copying files from the jar. Added a place holder template component added to new templates when they are created. Corrected an issue adding main nodes from custom templates. Prevented clarin profile xsd files that are already on the local file system from being cached. Added more detail to the error log. Added the Arbil icon and application title to the dock for the mac installer version. Added a build target to publish the applet and webstart versions into the shibothised server directory. Added Unknown and Unspecified as valid values for date fields in the default template. Added a template for media file key. Added a php page to list all the historical versions of Arbil for interested users. Added thread groups to maintain the live threads and restart then in the event of interruptions such as occur in the applet. Created a new applet class to replace the out of date version. Added an export option to make the output filenames lamus compatible. Suppressed the file/exit menu item from the applet version. Created an applet template for lux17. Limited the dom.id cleanup to only be performed on imdi files. Corrected spelling in a dialogue text. Modified the metadata loading thread to be more robust. Added a logout button to the applet. Corrected issue deselecting local xsd templates in the template dialogue. Corrected an issue reading the template type from IMDI vs CMDI files. Update windows installer paths.

--- a/src/arbil-win-installer.iss.template
+++ b/src/arbil-win-installer.iss.template
@@ -14,7 +14,7 @@ AppSupportURL=http://www.lat-mpi.eu/tools/arbil
 AppUpdatesURL=http://www.lat-mpi.eu/tools/arbil
 DefaultDirName={pf}\Arbil
 DefaultGroupName=Language archiving tools (LAT) 
-OutputDir=C:\windows\profiles\petwit\Desktop\@BuildDirectory@\distribution-win32
+OutputDir=C:\users\petwit\Desktop\@BuildDirectory@\distribution-win32
 OutputBaseFilename=arbil-installer-@ArbilVersionNumber@
 Compression=lzma
 SolidCompression=yes
@@ -48,11 +48,11 @@ Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{
 Name: "quicklaunchicon"; Description: "{cm:CreateQuickLaunchIcon}"; GroupDescription: "{cm:AdditionalIcons}"; Flags: unchecked
 
 [Files]
-Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\arbil-@ArbilVersionNumber@.jar"; DestDir: "{app}"; Flags: ignoreversion
-Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\distribution-win32\temp\@InstalledIcon@.ico"; DestDir: "{app}"; Flags: ignoreversion
-Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\distribution-win32\temp\ImageMagick\*"; DestDir: "{app}\ImageMagick\"; Flags: ignoreversion
+Source: "C:\users\petwit\Desktop\@BuildDirectory@\arbil-@ArbilVersionNumber@.jar"; DestDir: "{app}"; Flags: ignoreversion
+Source: "C:\users\petwit\Desktop\@BuildDirectory@\distribution-win32\temp\@InstalledIcon@.ico"; DestDir: "{app}"; Flags: ignoreversion
+Source: "C:\users\petwit\Desktop\@BuildDirectory@\distribution-win32\temp\ImageMagick\*"; DestDir: "{app}\ImageMagick\"; Flags: ignoreversion
 ; todo: include the imagemagick sub directories
-Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\lib\*"; DestDir: "{app}\lib\"; Flags: ignoreversion recursesubdirs createallsubdirs
+Source: "C:\users\petwit\Desktop\@BuildDirectory@\lib\*"; DestDir: "{app}\lib\"; Flags: ignoreversion recursesubdirs createallsubdirs
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [Icons]
