Moved the table cell and long field editor and sub components into a separate package. Preserved the archive handles on import and export so that LAMUS knows which files are which. Added the field usage description as a heading in the long field editor. Added local caching and ability to use external xsd files for Clarin such as xml-lang. Added check for unnamed nodes when reading clarin profiles. Updated delete node to remove the deleted node from all tables when deleting from the root of the tree. Updated the delete node to also close the relevant long field editors. Added an indicator for individual file download progress (file name and bytes) to the import export dialogue. Corrected the removal of nodes and sub nodes from the tree, tables and long field editors when a node is deleted. Allowed cookies in the applet version, so that shibboleth logins will function (when not logged in the shibboleth cookies overrun the server headers hence they are normally disabled). When there is no type checker result any previous value is now kept rather than being removed. Prevented the test file that is used to test write access to the working directory being left when the application is abnormally terminated. Added function of closing any long field editors of a node when it is deleted. Corrected issue when saving from the long field editor where the freshly typed value was lost. Corrected issue when adding a description etc. where the long field editor could contain the wrong number of fields after reloading. When saving made sure that the currently edited table or long field editor stores its data first. Modified the lux17 applet page to be php and provided the logged in username to the applet. Prevented cookies being blocked when in the applet. Added a log out file menu item to the applet. Added logged in user name to the log out file menu item in the applet.

--- a/src/arbil-applet-lux17.php.template
+++ b/src/arbil-applet-lux17.php.template
@@ -12,9 +12,10 @@
         <META HTTP-EQUIV="Expires" CONTENT="-1">
     </head>
     <body>
-        <APPLET CODEBASE="http://lux17.mpi.nl/arbil/" CODE="nl.mpi.arbil.ArbilApplet2.class" ARCHIVE="lib/corpusstructure-1.6.1.jar,lib/imdiapi-1.0.6.jar,lib/log4j-1.2.14.jar,lib/saxon8.jar,lib/saxon8-dom.jar,lib/@TypeCheckVersion@,lib/xalan-2.6.0.jar,lib/xercesImpl-2.9.0.jar,lib/bcprov-jdk15-143.jar,lib/slcshttps_jdk15_v0.2.jar,lib/xbean.jar,lib/commons-digester-2.0.jar,lib/commons-logging-1.1.jar,lib/commons-beanutils-1.8.0.jar,lib/xmlpublic.jar,arbil-@ArbilVersionNumber@.jar" WIDTH=100% HEIGHT=100%>
-            <PARAM NAME="LogoutUrl" VALUE="http://lux17.mpi.nl/Shibboleth.sso/Logout">
-            <PARAM NAME="UserName" VALUE="a html user">
+        <? $anAntiCacheString = date("Ymdhis"); ?>
+        <APPLET CODEBASE="http://lux17.mpi.nl/arbil/" CODE="nl.mpi.arbil.ArbilApplet2.class" ARCHIVE="lib/corpusstructure-1.6.1.jar?<? echo $anAntiCacheString; ?>,lib/imdiapi-1.0.6.jar?<? echo $anAntiCacheString; ?>,lib/log4j-1.2.14.jar?<? echo $anAntiCacheString; ?>,lib/saxon8.jar?<? echo $anAntiCacheString; ?>,lib/saxon8-dom.jar?<? echo $anAntiCacheString; ?>,lib/@TypeCheckVersion@?<? echo $anAntiCacheString; ?>,lib/xalan-2.6.0.jar?<? echo $anAntiCacheString; ?>,lib/xercesImpl-2.9.0.jar?<? echo $anAntiCacheString; ?>,lib/bcprov-jdk15-143.jar?<? echo $anAntiCacheString; ?>,lib/slcshttps_jdk15_v0.2.jar?<? echo $anAntiCacheString; ?>,lib/xbean.jar?<? echo $anAntiCacheString; ?>,lib/commons-digester-2.0.jar?<? echo $anAntiCacheString; ?>,lib/commons-logging-1.1.jar?<? echo $anAntiCacheString; ?>,lib/commons-beanutils-1.8.0.jar?<? echo $anAntiCacheString; ?>,lib/xmlpublic.jar?<? echo $anAntiCacheString; ?>,arbil-@ArbilVersionNumber@.jar?<? echo $anAntiCacheString; ?>" WIDTH=100% HEIGHT=100%>
+            <PARAM NAME="LogoutUrl" VALUE="http://<? echo $_SERVER["HTTP_HOST"]; ?>/Shibboleth.sso/Logout">
+            <PARAM NAME="UserName" VALUE="<? echo $_SERVER["REMOTE_USER"]; ?>">
         </APPLET>
     </body>
 </html>
