--- a/src/arbil.jnlp.template
+++ b/src/arbil.jnlp.template
@@ -47,7 +47,7 @@
     <!--<resources os="windows">
         <nativelib href="lib/ImageMagick-6.5.9-Win32.jar"/>
     </resource>-->
-    <application-desc main-class="nl.mpi.arbil.LinorgFrame">
+    <application-desc main-class="nl.mpi.arbil.ArbilMain">
       <!--<argument>-update_via_javaws</argument>-->
     </application-desc>
 </jnlp>
