Updated the main class name to reflect changes in the code.

--- a/src/start-arbil.template
+++ b/src/start-arbil.template
@@ -4,4 +4,4 @@ exec java \
 	-classpath "$BASEDIR/arbil-@ArbilVersionNumber@.jar:$BASEDIR/lib" \
 	-Xdock:name="@ApplicationTitle@" \
         -Xdock:icon="$BASEDIR/../Resources/arbil@FilenameIdentifier@.icns" \
-	nl.mpi.arbil.LinorgFrame
+	nl.mpi.arbil.ArbilMain
