--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -23,6 +23,7 @@
 		<jetty.version>6.1.25</jetty.version>
 		<slf4j.version>1.5.8</slf4j.version>
 		<log4j.version>1.2.14</log4j.version>
+	 <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
 	</properties>
 	<dependencies>
 		<!--  WICKET DEPENDENCIES -->
