--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -80,6 +80,11 @@
 	    <version>${jetty.version}</version>
 	    <scope>provided</scope>
 	</dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>arbil</artifactId>
+            <version>2.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
 	<resources>
