--- a/arbil-wicket/src/main/webapp/WEB-INF/web.xml
+++ b/arbil-wicket/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,7 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-	 version="2.4">
-
-	<display-name>arbil-wicket</display-name>
-
-	 <!--  
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+    <display-name>arbil-wicket</display-name>
+    <!--  
 	      There are three means to configure Wickets configuration mode and they are
 	      tested in the order given. 
 	      1) A system property: -Dwicket.configuration
@@ -15,20 +10,16 @@
 	      The value might be either "development" (reloading when templates change)
 	      or "deployment". If no configuration is found, "development" is the default.
 	-->
-
-	<filter>
-		<filter-name>wicket.arbil-wicket</filter-name>
- 		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
-		<init-param>
-			<param-name>applicationClassName</param-name>
-			<param-value>nl.mpi.WicketApplication</param-value>
- 		</init-param>
- 	</filter>
-
- <filter-mapping>
-  <filter-name>wicket.arbil-wicket</filter-name>
-	<url-pattern>/*</url-pattern>
- </filter-mapping>
-
-
+    <filter>
+        <filter-name>wicket.arbil-wicket</filter-name>
+        <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+        <init-param>
+            <param-name>applicationClassName</param-name>
+            <param-value>nl.mpi.arbil.wicket.WicketApplication</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>wicket.arbil-wicket</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
