Made generic (and abstract) ArbilInjector that injects any implementation of bugCatcher, messageHandler etc into all classes that requires them Old ArbilInjector is now ArbilDesktopInjector concrete class

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -85,6 +85,7 @@
 		    </archive>
 		</configuration>
 	    </plugin>
+	    <!-- TODO: copy fallback IMDI templates (call ant task) -->
 	</plugins>
     </build>
     <dependencies>
