--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>arbil</artifactId>
             <version>2.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.wicketstuff</groupId>
+            <artifactId>push-timer</artifactId>
+            <version>1.4.17.1</version>
+        </dependency>
     </dependencies>
     <build>
 	<resources>
