--- a/arbil-wicket/src/main/webapp/WEB-INF/web.xml
+++ b/arbil-wicket/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
         <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
         <init-param>
             <param-name>applicationClassName</param-name>
-            <param-value>nl.mpi.arbil.wicket.WicketApplication</param-value>
+            <param-value>nl.mpi.arbil.wicket.ArbilWicketApplication</param-value>
         </init-param>
     </filter>
     <filter-mapping>
