--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>push-timer</artifactId>
             <version>1.4.17.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava-collections</artifactId>
+            <version>r03</version>
+        </dependency>
     </dependencies>
     <build>
 	<resources>
