--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -6,12 +6,13 @@
     <artifactId>arbil-wicket</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-	<!-- TODO project name  -->
-    <description></description>
-	<!--
-		TODO <organization> <name>company name</name> <url>company url</url>
-		</organization>
-	-->
+    <name>Arbil Wicket</name>
+    <description>Wicket components and application based on Arbil</description>
+    <organization> 
+	<name>The Language Archive</name> 
+	<url>http://www.lat-mpi.eu/</url>
+    </organization>
+	
     <licenses>
 	<license>
 	    <name>The Apache Software License, Version 2.0</name>
@@ -20,6 +21,7 @@
 	</license>
     </licenses>
     <properties>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<wicket.version>1.4.17</wicket.version>
 	<jetty.version>6.1.25</jetty.version>
 	<slf4j.version>1.5.8</slf4j.version>
@@ -80,20 +82,21 @@
 	    <version>${jetty.version}</version>
 	    <scope>provided</scope>
 	</dependency>
+	
+	<dependency>
+	    <groupId>org.wicketstuff</groupId>
+	    <artifactId>push-timer</artifactId>
+	    <version>1.4.17.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava-collections</artifactId>
+	    <version>r03</version>
+	</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>arbil</artifactId>
-            <version>2.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wicketstuff</groupId>
-            <artifactId>push-timer</artifactId>
-            <version>1.4.17.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava-collections</artifactId>
-            <version>r03</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
@@ -130,6 +133,7 @@
 		<inherited>true</inherited>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-compiler-plugin</artifactId>
+		<version>2.3.2</version>
 		<configuration>
 		    <source>1.5</source>
 		    <target>1.5</target>
@@ -140,16 +144,8 @@
 	    <plugin>
 		<groupId>org.mortbay.jetty</groupId>
 		<artifactId>maven-jetty-plugin</artifactId>
-	    </plugin>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-eclipse-plugin</artifactId>
-		<version>2.8</version>
-		<configuration>
-		    <downloadSources>true</downloadSources>
-		</configuration>
+		<version>6.1.10</version>
 	    </plugin>
 	</plugins>
     </build>
-    <name>Arbil Wicket</name>
 </project>
