--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -12,14 +12,9 @@
 	<name>The Language Archive</name> 
 	<url>http://www.lat-mpi.eu/</url>
     </organization>
-	
-    <licenses>
-	<license>
-	    <name>The Apache Software License, Version 2.0</name>
-	    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-	    <distribution>repo</distribution>
-	</license>
-    </licenses>
+    <scm>
+    	<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/arbil-wicket</developerConnection>
+  	</scm>
     <properties>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<wicket.version>1.4.17</wicket.version>
@@ -29,6 +24,11 @@
 	<netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
     </properties>
     <dependencies>
+	<dependency>
+		<groupId>${project.groupId}</groupId>
+		<artifactId>arbil</artifactId>
+		<version>2.3-SNAPSHOT</version>
+	</dependency>
 		<!--  WICKET DEPENDENCIES -->
 	<dependency>
 	    <groupId>org.apache.wicket</groupId>
@@ -93,11 +93,6 @@
 	    <artifactId>guava-collections</artifactId>
 	    <version>r03</version>
 	</dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>arbil</artifactId>
-            <version>2.3-SNAPSHOT</version>
-        </dependency>
     </dependencies>
     <build>
 	<resources>
