--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.7.2</version>
         <configuration>
+            <argLine>-Dwt.headless</argLine>
+            <argLine>-Djava.awt.headless=true</argLine>
         </configuration>
       </plugin>
       <plugin>
