--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.7.2</version>
         <configuration>
+        	<forkMode>never</forkMode>
             <argLine>-Dwt.headless</argLine>
             <argLine>-Djava.awt.headless=true</argLine>
         </configuration>
