--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 
   <scm>
      <developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/</developerConnection>
-  </scm>
+      <url>https://trac.mpi.nl/wiki/Arbil</url>
+ </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
