--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.16</version>
 	</dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>corpusstructure-api</artifactId>
+            <version>1.7.3</version>
+        </dependency>
     </dependencies>
     <repositories>
 	<repository>
