--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <artifactId>findbugs-maven-plugin</artifactId>
         <configuration>
           <findbugsXmlOutput>True</findbugsXmlOutput>
-          <threshold>Low</threshold>
+          <threshold>Normal</threshold>
           <effort>Min</effort>
         </configuration>
       </plugin>
