--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -93,6 +93,11 @@
 	    <artifactId>guava-collections</artifactId>
 	    <version>r03</version>
 	</dependency>
+        <dependency>
+            <groupId>org.wicketstuff</groupId>
+            <artifactId>progressbar</artifactId>
+            <version>1.4.17.2</version>
+        </dependency>
     </dependencies>
     <build>
 	<resources>
