--- a/src/main/java/arbil.jnlp.template
+++ b/src/main/java/arbil.jnlp.template
@@ -24,8 +24,9 @@
     <resources>
         <java max-heap-size="1073741824" version="1.5+"/>
         <jar href="arbil-@ArbilVersionNumber@.jar" main="true" download="eager"/>
-        <jar href="lib/corpusstructure-1.6.1.jar" download="eager"/>
-        <jar href="lib/imdiapi-1.0.6.jar" download="eager"/>
+        <jar href="lib/corpusstructure-api-1.7.3.jar" download="eager"/>
+        <jar href="lib/imdi-api-1.1.2.jar" download="eager"/>
+	<jar href="lib/mpi-util-1.0.0.jar" download="eager"/>
         <jar href="lib/log4j-1.2.14.jar" download="eager"/>
         <jar href="lib/saxon8.jar" download="eager"/>
         <jar href="lib/saxon8-dom.jar" download="eager"/>
