--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -5,7 +5,7 @@
     <groupId>nl.mpi</groupId>
     <artifactId>arbil-wicket</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-fieldsnodetest-SNAPSHOT</version>
     <name>Arbil Wicket</name>
     <description>Wicket components and application based on Arbil</description>
     <organization> 
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>arbil</artifactId>
-            <version>2.3-SNAPSHOT</version>
+            <version>2.3-fieldsnodetest-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
