--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -141,6 +141,11 @@
             <artifactId>corpusstructure-api</artifactId>
             <version>1.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>xml-resolver</groupId>
+            <artifactId>xml-resolver</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
     <repositories>
 	<repository>
