--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
     <groupId>nl.mpi</groupId>
     <artifactId>arbil</artifactId>
     <packaging>jar</packaging>
-    <version>2.3-SNAPSHOT</version>
+    <version>2.3-TESTING</version>
     <name>Arbil</name>
     <organization> 
 	<name>The Language Archive</name> 
 	<url>http://www.lat-mpi.eu/</url>
     </organization>
     <scm>
-		<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/arbil</developerConnection>
-    	 <url>https://trac.mpi.nl/wiki/Arbil</url>
+	<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/arbil</developerConnection>
+    	<url>https://trac.mpi.nl/wiki/Arbil</url>
     </scm>
     <properties>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
