[maven-release-plugin] prepare branch arbil-rnull

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -1,185 +1,213 @@
 
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>nl.mpi</groupId>
-    <artifactId>arbil</artifactId>
-    <packaging>jar</packaging>
-    <version>2.4-SNAPSHOT</version>
-    <name>Arbil</name>
-    <organization> 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>nl.mpi</groupId>
+	<artifactId>arbil</artifactId>
+	<packaging>jar</packaging>
+	<version>2.4-SNAPSHOT</version>
+	<name>Arbil</name>
+	<organization> 
 	<name>The Language Archive</name> 
 	<url>http://www.lat-mpi.eu/</url>
     </organization>
-    <scm>
-		<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/arbil</developerConnection>
-    	 <url>https://trac.mpi.nl/wiki/Arbil</url>
-    </scm>
-    <properties>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <build>
-	<plugins>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-compiler-plugin</artifactId>
-		<version>2.0.2</version>
-		<configuration>
-		    <source>1.5</source>
-		    <target>1.5</target>
-		</configuration>
-	    </plugin>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-jar-plugin</artifactId>
-		<version>2.3.1</version>
-		<configuration>
-		    <archive>
+	<scm>
+		<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/branches/arbil-rnull</developerConnection>
+		<url>https://trac.mpi.nl/wiki/Arbil/branches/arbil-rnull</url>
+	</scm>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<version>1.0</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<doCheck>false</doCheck>
+					<doUpdate>false</doUpdate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<archive>
 			<manifest>
 			    <addClasspath>true</addClasspath>
 			    <mainClass>nl.mpi.arbil.ArbilMain</mainClass>
 			</manifest>
 		    </archive>
-		    <excludes>
-			<exclude>nl/mpi/arbil/resources/**/readme.txt</exclude>
-			<exclude>nl/mpi/arbil/resources/icons/svg-files/**</exclude>
-			<exclude>nl/mpi/arbil/resources/icons/*.ico</exclude>
-			<exclude>nl/mpi/arbil/resources/icons/*.icns</exclude>
-			<exclude>nl/mpi/arbil/ui/applet/**</exclude>
-		    </excludes>
-		</configuration>
-	    </plugin>
-	    <!--copy fallback IMDI templates (call ant task) -->
-	    <plugin>
-		<artifactId>maven-antrun-plugin</artifactId>
-		<version>1.6</version>
-		<executions>
-		    <execution>
-			<phase>compile</phase>
-			<configuration>
-			    <target>
-				<property name="BUILDDIR" value="${project.build.outputDirectory}"/>
-				<ant antfile="arbil-getfallbackfiles.xml">
-				    <target name="getFallbackFiles-x" />
-				</ant>
-			    </target>
-			</configuration>
-			<goals>
-			    <goal>run</goal>
-			</goals>
-		    </execution>
-		</executions>
-	    </plugin>
-	</plugins>
-    </build>
-    <dependencies>	
-	<dependency>
-	    <groupId>org.apache.xmlbeans</groupId>
-	    <artifactId>xmlbeans</artifactId>
-	    <version>2.4.0</version>
-	    <scope>compile</scope>
-	</dependency>
-	<dependency>
-	    <groupId>nl.mpi</groupId>
-	    <artifactId>typechecker</artifactId>
-	    <version>1.6.4</version>
-	</dependency>
-	<dependency>
-	    <groupId>nl.nikhef</groupId>
-	    <artifactId>slcshttps</artifactId>
-	    <version>0.2</version>
-	</dependency>
-	<dependency>
-	    <groupId>nl.mpi</groupId>
-	    <artifactId>imdi-api</artifactId>
-	    <version>1.1.2</version>
-	</dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>mpi-util</artifactId>
-            <version>1.0.0</version>
-        </dependency>	
-	<dependency>
-	    <groupId>junit</groupId>
-	    <artifactId>junit</artifactId>
-	    <version>4.6</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>net.sf.saxon</groupId>
-	    <artifactId>saxon</artifactId>
-	    <version>8.7</version>
-	</dependency>
-	<dependency>
-	    <groupId>net.sf.saxon</groupId>
-	    <artifactId>saxon-dom</artifactId>
-	    <version>8.7</version>
-	</dependency>
-	<dependency>
-	    <groupId>xerces</groupId>
-	    <artifactId>xercesImpl</artifactId>
-	    <version>2.9.0</version>
-	</dependency>
-	<dependency>
-	    <groupId>xalan</groupId>
-	    <artifactId>xalan</artifactId>
-	    <version>2.7.1</version>
-	</dependency>
-	<dependency>
-	    <groupId>commons-digester</groupId>
-	    <artifactId>commons-digester</artifactId>
-	    <version>2.0</version>
-	</dependency>
-	<dependency>
-	    <groupId>log4j</groupId>
-	    <artifactId>log4j</artifactId>
-	    <version>1.2.16</version>
-	</dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>corpusstructure-api</artifactId>
-            <version>1.7.3</version>
-        </dependency>
-    </dependencies>
-    <repositories>
-	<repository>
-	    <id>MPI</id>
-	    <name>MPI LAT Repository</name>
-	    <url>http://lux15.mpi.nl/nexus/content/groups/public/</url>
-	</repository>
-    </repositories>
-<reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.7.2</version>
-        <configuration>
-                <forkMode>never</forkMode>
-            <argLine>-Dwt.headless</argLine>
-            <argLine>-Djava.awt.headless=true</argLine>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jxr-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <configuration>
-          <findbugsXmlOutput>True</findbugsXmlOutput>
-          <threshold>Normal</threshold>
-          <effort>Min</effort>
-        </configuration>
-      </plugin>
-    </plugins>
-  </reporting>
-
-
+					<excludes>
+						<exclude>nl/mpi/arbil/resources/**/readme.txt</exclude>
+						<exclude>nl/mpi/arbil/resources/icons/svg-files/**</exclude>
+						<exclude>nl/mpi/arbil/resources/icons/*.ico</exclude>
+						<exclude>nl/mpi/arbil/resources/icons/*.icns</exclude>
+						<exclude>nl/mpi/arbil/ui/applet/**</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<!--copy fallback IMDI templates (call ant task) -->
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<configuration>
+							<target>
+								<property name="BUILDDIR" value="${project.build.outputDirectory}" />
+								<ant antfile="arbil-getfallbackfiles.xml">
+									<target name="getFallbackFiles-x" />
+								</ant>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.2.2</version>
+				<configuration>
+					<branchName>arbil-r${buildNumber}</branchName>
+					<checkModificationExcludes>
+						<param>ArbilVersion.java</param>
+						<param>pom.xml</param>
+					</checkModificationExcludes>
+					<updateBranchVersions>false</updateBranchVersions>
+					<updateWorkingCopyVersions>false</updateWorkingCopyVersions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.xmlbeans</groupId>
+			<artifactId>xmlbeans</artifactId>
+			<version>2.4.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>nl.mpi</groupId>
+			<artifactId>typechecker</artifactId>
+			<version>1.6.4</version>
+		</dependency>
+		<dependency>
+			<groupId>nl.nikhef</groupId>
+			<artifactId>slcshttps</artifactId>
+			<version>0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>nl.mpi</groupId>
+			<artifactId>imdi-api</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>nl.mpi</groupId>
+			<artifactId>mpi-util</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon</artifactId>
+			<version>8.7</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon-dom</artifactId>
+			<version>8.7</version>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-digester</groupId>
+			<artifactId>commons-digester</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>corpusstructure-api</artifactId>
+			<version>1.7.3</version>
+		</dependency>
+	</dependencies>
+	<repositories>
+		<repository>
+			<id>MPI</id>
+			<name>MPI LAT Repository</name>
+			<url>http://lux15.mpi.nl/nexus/content/groups/public/</url>
+		</repository>
+	</repositories>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.7.2</version>
+				<configuration>
+					<forkMode>never</forkMode>
+					<argLine>-Dwt.headless</argLine>
+					<argLine>-Djava.awt.headless=true</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<configuration>
+					<findbugsXmlOutput>True</findbugsXmlOutput>
+					<threshold>Normal</threshold>
+					<effort>Min</effort>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
