--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -12,8 +12,8 @@
 	<url>http://www.lat-mpi.eu/</url>
     </organization>
 	<scm>
-		<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/branches/arbil-rnull</developerConnection>
-		<url>https://trac.mpi.nl/wiki/Arbil/branches/arbil-rnull</url>
+		<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/arbil</developerConnection>
+		<url>https://trac.mpi.nl/wiki/Arbil</url>
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
